# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/

[build-system]
# PEP 518 https://www.python.org/dev/peps/pep-0518/
# https://discuss.python.org/t/help-testing-experimental-features-in-setuptools/13821
requires = [
  "setuptools>=64",
  "wheel",               # for bdist package distribution
  "setuptools_scm>=6.4", # for automated versioning
]

# PEP 517 https://peps.python.org/pep-0517/
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
# include = []
# exclude = ["tests"]
namespaces = true

# disable automatic versioning
#[tool.setuptools_scm]
#write_to = "src/tinypkg/_version.py"

# PEP 621 https://peps.python.org/pep-0621/
[project]
name = "onebase"
version = "0.1.0"
# for automated versioning by pypa/setuptools_scm. see https://peps.python.org/pep-0621/#dynamic
# dynamic = ["version"]
description = "A Python based server for local communication with Viessmann OneBase devices."
authors = [{ name = "@Philip-Wiege" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved ::Apache Software License",
  "Programming Language :: Python"
]
keywords = ["Viessmann", "OneBase", "CAN", "UDS", "DoIP", "Vitocal", "Vitocharge", "Vitoair", "Vitodens", "MQTT", "HTTP", "HomeAssistant"]
dependencies = [
  "onebase",
  "open3e"
]
[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black==21.10b0"]
[project.urls]
Homepage = "https://github.com/Philip-Wiege/viessmannonebaseserver"
documentation = "https://github.com/Philip-Wiege/ViessmannOneBaseServer/wiki"
repository = "https://github.com/Philip-Wiege/viessmannonebaseserver"

#[project.scripts]


# disable automatic code style check (for now)
#[tool.black]
#target-version = ['py39']
#line-length = 120
